--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-package-lock.json
+# /.pnp
+# .pnp.js
+# package-lock.json
 
 # testing
 /coverage
@@ -14,7 +14,7 @@ package-lock.json
 
 # misc
 .DS_Store
-.env.local
+# .env.local
 .env.development.local
 .env.test.local
 .env.production.local
