--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "firebase": "^8.6.7",
+    "moment": "^2.29.1",
+    "nodemailer": "^6.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
