--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "express-validator": "^6.12.0",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
