--- a/functions/.env.auth
+++ b/functions/.env.auth
@@ -1,2 +1,2 @@
-SENDER_EMAIL=joaquingarcia7596@gmail.com
-SENDER_PASSWORD=J39290658garcia7
+REACT_APP_SENDER_EMAIL="joaquingarcia7596@gmail.com"
+REACT_APP_SENDER_PASSWORD="j39290658garcia7"
