--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,15 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
     "nodemailer": "^6.6.2"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
