--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@material-ui/core": "^4.11.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.6.7",
+    "firebase-admin": "^9.10.0",
+    "firebase-functions": "^3.14.1",
     "moment": "^2.29.1",
-    "nodemailer": "^6.6.1",
+    "nodemailer": "^6.6.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
