--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@handsontable/react": "^11.1.0",
     "@material-ui/core": "^4.11.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +12,7 @@
     "firebase": "^8.10.0",
     "firebase-admin": "^9.10.0",
     "firebase-functions": "^3.14.1",
+    "handsontable": "^11.1.0",
     "moment": "^2.29.1",
     "nodemailer": "^6.6.2",
     "react": "^17.0.2",
