--- a/functions/.env.auth
+++ b/functions/.env.auth
@@ -1,2 +1,2 @@
-REACT_APP_SENDER_EMAIL=joaquingarcia7596@gmail.com
-REACT_APP_SENDER_PASSWORD=
+REACT_APP_SENDER_EMAIL="joaquingarcia7596@gmail.com"
+REACT_APP_SENDER_PASSWORD="nilzukepqgaiclzb"
