--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "language-app",
+  "name": "email-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@handsontable/react": "^11.1.0",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
@@ -18,6 +20,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
