--- a/.env.local
+++ b/.env.local
@@ -9,4 +9,8 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=G-NKT96HVYWS
 REACT_APP_FIREBASE_TOKEN=1//0hsfpPtDvOPoNCgYIARAAGBESNwF-L9IrHnK4YMQkzUGLH6c08dKTETYo_qVIT4gCi7HMY9DRjmKWx68fm1XkR4aKoGlIAJHYFcw
 
 
-//REACT_APP_FIREBASE_BASE_URL='https://us-central1-languageapp-4985f.cloudfunctions.net/user'
+//REACT_APP_FIREBASE_BASE_URL_USER='https://us-central1-languageapp-4985f.cloudfunctions.net/user'
+
+//REACT_APP_FIREBASE_BASE_URL_MAILER='https://us-central1-languageapp-4985f.cloudfunctions.net/mailer
+
+// @reduxjs/toolkit @material-ui/icons react-redux react-hook-form
